hphp/hack/test/typecheck/new_inference/yield_from_generic.php.exp
File "yield_from_generic.php", line 8, characters 3-19:
Invalid yield from (Typing[4110])
File "yield_from_generic.php", line 6, characters 33-35:
Expected int
File "yield_from_generic.php", line 8, characters 16-18:
But got string
